...
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="countryLabel"/>
                                </userDefinedRuntimeAttributes>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Name" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RIo-yw-l2C" userLabel="FULL NAME TEXT INPUT">
                                <rect key="frame" x="66" y="211" width="293" height="30"/>
                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="fullnameTxtBox"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" returnKeyType="next" textContentType="name"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="fullnameTxtBox"/>
                                </userDefinedRuntimeAttributes>
...
                                <rect key="frame" x="66" y="284" width="293" height="30"/>
                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" returnKeyType="next" textContentType="street-address"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addressTxtBox"/>
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Zip Code" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KC5-YC-Cie" userLabel="ZIP/POSTAL CODE TEXT INPUT">
                                <rect key="frame" x="66" y="441" width="293" height="30"/>
                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" returnKeyType="next" textContentType="postal-code"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="zipPostalCodeTxtBox"/>
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="buyNowBtn" translatesAutoresizingMaskIntoConstraints="NO" id="DVl-8w-ZXK">
                                <rect key="frame" x="199" y="534" width="16" height="16"/>
                                <gestureRecognizers/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="buyNowBtn"/>
                                </userDefinedRuntimeAttributes>
...
